# MoRAGBench

./: .gitignore  README.md  download.py  requirements.txt
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/cli/: build.gradle.kts
android/embedding/: build.gradle.kts
android/embedding/sentence_embeddings/: build.gradle.kts
android/faiss/: build.gradle.kts
android/faiss/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/faiss/src/main/cpp/include/faiss/: CMakeLists.txt
android/faiss/src/main/cpp/include/faiss/gpu/: CMakeLists.txt
android/faiss/src/main/cpp/include/faiss/gpu/test/: CMakeLists.txt
android/faiss/src/main/cpp/include/faiss/python/: CMakeLists.txt
android/faiss/src/main/cpp/include/openblas/: openblas_config.h
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/llm/: build.gradle.kts
android/shared/: build.gradle.kts
benchmark/: benchmark.sh  generate_ann_configs.py  generate_task_configs.py  generate_task_configs_new.py  generate_task_configs_short.py  visualize.ipynb  visualize_paper.ipynb
benchmark/ann/completed_configs/: fashion_mnist__flat__metric-L2__k-1__default.json  fashion_mnist__flat__metric-L2__k-3__default.json  (+388 more)
benchmark/completed_configs/: trivia_qa_0.json  trivia_qa_10.json  trivia_qa_11.json  trivia_qa_12.json  trivia_qa_13.json  trivia_qa_14.json  trivia_qa_15.json  trivia_qa_16.json  trivia_qa_18.json  trivia_qa_2.json  trivia_qa_20.json  trivia_qa_25.json  trivia_qa_27.json  trivia_qa_3.json  trivia_qa_4.json  trivia_qa_5.json  trivia_qa_6.json  trivia_qa_7.json  trivia_qa_8.json  trivia_qa_9.json
client/: main.py  parse_ann_dataset.py  parse_config.py  parse_downstream_task.py  parse_embedding_model.py  parse_llm.py
client/classes/: ann_dataset.py  benchmark.py  common.py  downstream_task.py  embedding.py  faiss.py  llm.py
client/utils/: log.py  metrics.py  report_ann_results.py  report_task_results.py  shared.py
(+2707 files in other folders)
